--- a/mmp/config/config.properties
+++ b/mmp/config/config.properties
@@ -1,8 +1,9 @@
 browser=chrome
 environment=qa
 adminPortalUrl=http://96.84.175.78/MMP-Release2-Admin-Build.2.1.000/index.php
-adminUser=Thomas_444
-adminPassword=Edison_444
+adminUser=Ben@123
+adminPassword=Frank@123
 patientPortalUrl=http://96.84.175.78/MMP-Release2-Integrated-Build.6.8.000/portal/login.php
 patientUser=ria1
 patientPassword=Ria12345
+doctorName=Dr.Charlie
